--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 		<li><a href="#Contact">CONTACT</a></li>
 		<li><a href="#Experience">EXPERIENCE</a></li>
 		<li><a href="#Gallery">GALLERY</a></li>
-		<li><a href="/HTML/Homepage/home1.html" target="_parent">HOME</a></li>
+		<li><a href="#">HOME</a></li>
 		<img class="hi" src="fine.jpg"  alt="fine">
 	</ul>
-	
-
 
 	<div class="ama">
 		<a href="https://WWW.youtube.com/"  target="_blank">Instagram</a>
@@ -33,6 +31,11 @@
 
 
 <p>I'm a Software Engineer,Front-end Developer, Peer counscellor<br> , Graphic designer and Enterpreneur with a proven track record <br>of delivering result, wants the opportunity to demonstrate my <br>skills and support the growth of organisation through ICT and<br> STEM skills. </p>
+
+	<div id="Gallery">
+		<h3>Gallery</h3>
+		<p>Here are some of my projects!</p>
+	</div>
 
 <footer>ALL THE BEST!</footer>
 </body>
