--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MY Portifolio</title>
 </head>
-<link rel="stylesheet" type="text/css" href="Portifolio.css">
+<link rel="stylesheet" type="text/css" href="./portifolio.css">
 <body>
 	<h1><marquee><strong>WELCOME TO MY PORTIFOLIO</strong></marquee></h1>
     <h3>Email: sampsonama98@gmail.com</h3>
@@ -17,7 +16,7 @@
 		<li><a href="#Experience">EXPERIENCE</a></li>
 		<li><a href="#Gallery">GALLERY</a></li>
 		<li><a href="#">HOME</a></li>
-		<img class="hi" src="fine.jpg"  alt="fine">
+		<img class="hi" src="./fine.jpg"  alt="fine">
 	</ul>
 
 	<div class="ama">
