image folder created

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<li><a href="#Experience">EXPERIENCE</a></li>
 		<li><a href="#Gallery">GALLERY</a></li>
 		<li><a href="#Home">HOME</a></li>
-		<img class="hi" src="./fine.jpg"  alt="fine">
+		<img class="hi" src="./img/fine.jpg"  alt="fine">
 	</ul>
 
 	<div class="ama">
-		<a href="https://WWW.youtube.com/"  target="_blank">Instagram</a>
-	<a href="https://WWW.facebook.com/"  target="_blank">Facebook</a>
-	<a href="https://WWW.facebook.com/"  target="_blank">LinkedIn</a>
+		<a href="https://twitter.com/ama_sampson/"  target="_blank">Twitter</a>
+	<a href="https://web.facebook.com/francisca.sampson.739/"  target="_blank">Facebook</a>
+	<a href="https://www.linkedin.com/in/francisca-ama-sampson-625b451b9//" target="_blank">LinkedIn</a>
 </div>
 	
 
@@ -47,7 +47,7 @@ I'm also Front-end developer<br><br>
 with a Bachelor of Science - BS focused in<br><br>
  Computer Science and Engineering from <br><br>
  University of Mines and Technology,Tarkwa.</p><br>
- <img  class="img"src="exp.jpg" alt="exp">
+ <img  class="img"src="./img/exp.jpg" alt="exp">
 </div>
 
 	<div id="Gallery">
@@ -56,20 +56,20 @@ with a Bachelor of Science - BS focused in<br><br>
 
 <div class="w3-content w3-display-container">
 
-	<img class="mySlides" src="or2.png" style="width:100%">
-	<img class="mySlides" src="final.png" style="width:100%">
-  <img class="mySlides" src="vals.png" style="width:100%">
-  <img class="mySlides" src="Sun2.png" style="width:100%">
-  <img class="mySlides" src="NAMING2.png" style="width:100%">
-  <img class="mySlides" src="Ube1.png" style="width:100%">
-  <img class="mySlides" src="birthday2.png" style="width:100%">
-  <img class="mySlides" src="Liquid1soap.png" style="width:100%">
-   <img class="mySlides" src="ch.png" style="width:100%">
-    <img class="mySlides" src="ch1.jpg" style="width:100%">
-     <img class="mySlides" src="agcm.png" style="width:100%">
-      <img class="mySlides" src="nice.png" style="width:100%">
-       <img class="mySlides" src="final2fund.png" style="width:100%">
-        <img class="mySlides" src="CRUDE.png" style="width:100%">
+	<img class="mySlides" src="./img/or2.png" style="width:100%">
+	<img class="mySlides" src="./img/final.png" style="width:100%">
+  <img class="mySlides" src="./img/vals.png" style="width:100%">
+  <img class="mySlides" src="./img/Sun2.png" style="width:100%">
+  <img class="mySlides" src="./img/NAMING2.png" style="width:100%">
+  <img class="mySlides" src="./img/Ube1.png" style="width:100%">
+  <img class="mySlides" src="./img/birthday2.png" style="width:100%">
+  <img class="mySlides" src="./img/Liquid1soap.png" style="width:100%">
+   <img class="mySlides" src="./img/ch.png" style="width:100%">
+    <img class="mySlides" src="./img/ch1.jpg" style="width:100%">
+     <img class="mySlides" src="./img/agcm.png" style="width:100%">
+      <img class="mySlides" src="./img/nice.png" style="width:100%">
+       <img class="mySlides" src="./img/final2fund.png" style="width:100%">
+        <img class="mySlides" src="./img/CRUDE.png" style="width:100%">
 
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
@@ -126,6 +126,6 @@ function showDivs(n) {
 <footer><p>Copyright &#169 2022.
 All Rights Reserved.</p></footer>
 
-<script type="text/javascript" src="js/bootstrap.js"></script>
+
 </body>
 </html>
